Fixes the DEPENDS in the Makefile
Signed-off-by: Julius Schulz-Zander <julius@inet.tu-berlin.de>

--- a/boot-notifier/Makefile
+++ b/boot-notifier/Makefile
@@ -1,5 +1,7 @@
 #
 # Copyright (C) 2013-2014 OpenWrt.org
+# Copyright (C) 2016-2017 TU Berlin, Johannes Wegener <mail@johanneswegener.de>
+# Copyright (C) 2016-2017 TU Berlin, Julius Schulz-Zander <julius@inet.tu-berlin.de>
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
@@ -27,28 +29,36 @@ endef
 define Package/openwifi-boot-notifier-base
   $(call Package/openwifi-boot-notifier/Default)
   TITLE:=Boot Notifier Base Package
-  DEPENDS:=+ip +rpcd +uhttpd-mod-ubus +mdns +shadow-useradd +uhttpd +rpcd-mod-iwinfo +rpcd-mod-file +libubox +libubus
+  DEPENDS:=+ip +rpcd +uhttpd-mod-ubus +mdns +uhttpd
+endef
+
+define Package/openwifi-boot-notifier-base/conffiles
+/etc/config/openwifi
 endef
 
 define Package/openwifi-boot-notifier-base/description
- Notify openwifi when booted
+$(call Package/openwifi-boot-notifier/Default/description)
+
+ Notify OpenWiFi when booted
+endef
+
+define Package/openwifi-boot-notifier-base/config
+	select BUSYBOX_CONFIG_FEATURE_SHADOWPASSWDS if !shadow-useradd
 endef
 
 define Package/openwifi-boot-notifier-luci2
   $(call Package/openwifi-boot-notifier/Default)
   TITLE:=Boot Notifier with LuCI v2 Remote Management
-  DEPENDS:=+ip +rpcd +uhttpd-mod-ubus +mdns +uhttpd +luci2 +@!shadow-useradd:BUSYBOX_CONFIG_FEATURE_SHADOWPASSWDS
+  DEPENDS:=+openwifi-boot-notifier-base +luci2
 endef
 
 define Package/openwifi-boot-notifier-luci2/description
+$(call Package/openwifi-boot-notifier/Default/description)
+
  Notify openwifi when booted
 endef
 
 define Build/Compile
-endef
-
-define Package/openwifi-boot-notifier-base/conffiles
-/etc/config/openwifi
 endef
 
 define Package/openwifi-boot-notifier-base/install
@@ -58,6 +68,9 @@ define Package/openwifi-boot-notifier-base/install
 	$(INSTALL_BIN) ./files/openwifi-boot-notifier.init  $(1)/etc/init.d/openwifi-boot-notifier
 	$(INSTALL_DATA) ./files/libopenwifi.sh $(1)/lib/openwifi/openwifi.sh
 	$(INSTALL_DATA) ./files/openwifi.config $(1)/etc/config/openwifi
+endef
+
+define Package/openwifi-boot-notifier-luci2/install
 endef
 
 define Package/openwifi-boot-notifier-base/postinst
