--- a/boot-flasher/Makefile
+++ b/boot-flasher/Makefile
@@ -16,8 +16,9 @@ PKG_MAINTAINER:=Johannes Wegener <mail@johanneswegener.de>
 include $(INCLUDE_DIR)/package.mk
 
 define Package/openwifi-boot-flasher/Default
-  SECTION:=utils
-  CATEGORY:=OpenWiFi
+  CATEGORY:=Administration
+  SECTION:=admin
+  SUBMENU:=OpenWiFi
 endef
 
 define Package/openwifi-boot-flasher/Default/description
