split notifier into lib

--- a/boot-notifier/Makefile
+++ b/boot-notifier/Makefile
@@ -92,6 +92,7 @@ define Package/openwifi-boot-notifier-base/install
 	$(INSTALL_DIR) $(1)/etc/config/
 	$(INSTALL_BIN) ./files/openwifi-boot-notifier.init  $(1)/etc/init.d/openwifi-boot-notifier
 	$(INSTALL_BIN) ./files/openwific.sh $(1)/sbin/openwific.sh
+	$(INSTALL_BIN) ./files/libopenwifi.sh $(1)/lib/openwifi/openwifi.sh
 	$(INSTALL_DATA) ./files/openwifi.config $(1)/etc/config/openwifi
 endef
 
